--- a/src/app/todo-list/todo-item/todo-item.component.html
+++ b/src/app/todo-list/todo-item/todo-item.component.html
@@ -8,27 +8,27 @@
 
   <div *ngIf="item.editing" class="todo-input-container">
     <input [(ngModel)]="tempTitle" (ngModelChange)="onTitleChange()" class="todo-input" style="resize: none;"
-      [autofocus]="item.editing" maxlength="50" (keyup.enter)="completeItemEdit(item)">
+      [autofocus]="item.editing" maxlength="50" (keyup.enter)="completeItemEdit()">
   </div>
 
   <div class="todo-actions-container">
 
     <!-- Actions in edit mode -->
     <div *ngIf="item.editing" class="todo-actions">
-      <button mat-mini-fab [disabled]="!item.title" (click)="completeItemEdit(item)" mat-mini-fab color="primary">
+      <button mat-mini-fab [disabled]="!item.title" (click)="completeItemEdit()" mat-mini-fab color="primary">
         <mat-icon>check</mat-icon>
       </button>
-      <button mat-mini-fab (click)="cancelItemEdit(item)" mat-mini-fab color="primary">
+      <button mat-mini-fab (click)="cancelItemEdit()" mat-mini-fab color="primary">
         <mat-icon>close</mat-icon>
       </button>
     </div>
 
     <!-- Actions in view mode -->
     <div *ngIf="!item.editing" class="todo-actions">
-      <button (click)="startItemEdit(item)" mat-mini-fab color="primary">
+      <button (click)="startItemEdit()" mat-mini-fab color="primary">
         <mat-icon>edit</mat-icon>
       </button>
-      <button (click)="deleteTodoItem(item.id)" mat-mini-fab color="primary">
+      <button (click)="deleteItem()" mat-mini-fab color="primary">
         <mat-icon>delete</mat-icon>
       </button>
     </div>
