Added single todo item loading on update and on delete. Renamed SpinnerService to LoadingService.

--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -20,8 +20,14 @@
   </div>
   <ng-container *ngIf="!(isLoading$ | async); else elseTemplate">
     <div *ngIf="pagedTodoList.length" class="todo-list-container">
-      <app-todo-item *ngFor="let item of pagedTodoList.pageData; trackBy: trackByItems" [item]="item"
-        (delete)="delete(item)" (completeEdit)="completeEdit(item)" (cancelEdit)="cancelEdit(item)"></app-todo-item>
+      <ng-container *ngFor="let item of pagedTodoList.pageData; trackBy: trackByItems">
+        <app-todo-item *ngIf="(isItemLoading(item) | async); else skeletonItem" [item]="item" (delete)="delete(item)"
+          (completeEdit)="completeEdit(item)" (cancelEdit)="cancelEdit(item)">
+        </app-todo-item>
+      </ng-container>
+      <ng-template #skeletonItem>
+        <app-skeleton-item></app-skeleton-item>
+      </ng-template>
     </div>
     <div *ngIf="!pagedTodoList.length" class="nothing-found-container">
       <div class="container">
@@ -32,20 +38,7 @@
   </ng-container>
   <ng-template #elseTemplate>
     <div class="todo-list-container">
-      <div class="todo-item" *ngFor="let item of generateFakeItems(6)">
-        <ngx-skeleton-loader class="todo-checkbox-edit" appearance="circle"
-          [theme]="{ 'border-radius': '0px', width: '16px', height: '16px', margin: 'auto'}">
-        </ngx-skeleton-loader>
-        <div class="todo-input-container">
-          <ngx-skeleton-loader class="todo-input" [theme]="{ margin: 'auto', height: '19px'}"></ngx-skeleton-loader>
-        </div>
-        <div class="todo-actions-container">
-          <div class="todo-actions">
-            <ngx-skeleton-loader appearance="circle"></ngx-skeleton-loader>
-            <ngx-skeleton-loader appearance="circle"></ngx-skeleton-loader>
-          </div>
-        </div>
-      </div>
+      <app-skeleton-item *ngFor="let item of generateFakeItems(6)"></app-skeleton-item>
     </div>
   </ng-template>
 
