--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -38,7 +38,7 @@
   </ng-container>
   <ng-template #elseTemplate>
     <div class="todo-list-container">
-      <app-skeleton-item *ngFor="let item of generateFakeItems(6)"></app-skeleton-item>
+      <app-skeleton-item *ngFor="let item of generateSkeletonItems(6)"></app-skeleton-item>
     </div>
   </ng-template>
 
